# binary-greedy-meshing

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: mesh.rs
examples/: sphere.rs  sphere32.rs  textured.rs  transparency.rs
src/: face.rs  lib.rs  material.rs  quad.rs
